# lps25_pressure_sensor_demo

./: .gitignore  Cargo.toml  Embed.toml  Justfile  README.md  barometer_with_lcd_panel.fzz  openocd.cfg
.cargo/: config
aht20-driver/src/: lib.rs
lps_25_pressure_sensor_demo/: Cargo.toml
lps_25_pressure_sensor_demo/src/: main.rs
src/: main.rs
