[package]
name = "lps25_barometer"
version = "0.1.0"
authors = ["Rikard Anglerud <rikard@anglerud.com>"]
description = "Base binary crate for STM32F103 Blue Pill boards"
categories = ["embedded", "no-std"]
edition = "2018"

[dependencies]
aht20-driver = "1.1.0"
alloc-cortex-m = "0.4.1"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
defmt = "0.3.0"
defmt-rtt = "0.3.1"
embedded-hal = "0.2.4"
hd44780-driver = "0.4.0"
lps25hb = "0.0.4"
nb = "1.0.0"
panic-probe = { version="0.3.0", features = ["print-defmt"] }
shared-bus = "0.2.2"

[dependencies.stm32f1xx-hal]
version = "0.6.1"
features = ["rt", "stm32f103", "medium"]

[[bin]]
name = "lps25_barometer"
test = false
bench = false

[profile.release]
lto = true
codegen-units = 1
debug = true
opt-level = "z"
