[package]
name = "lps25_barometer"
version = "0.1.0"
authors = ["Rikard Anglerud <rikard@anglerud.com>"]
description = "Base binary crate for STM32F103 Blue Pill boards"
categories = ["embedded", "no-std"]
edition = "2021"

[dependencies]
aht20-driver = "1.1.0"
arrayvec = { version = "0.7.2", default-features = false }
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
defmt = "0.3.0"
defmt-rtt = "0.3.1"
embedded-hal = "0.2.7"
hd44780-driver = "0.4.0"
lps25hb = "0.1.0"
nb = "1.0.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
shared-bus = "0.2.2"

[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["rt", "stm32f103", "medium"]

# [dependencies.defmt]
# version = "0.3.0"
# features = ["unstable-test"]

[[bin]]
name = "lps25_barometer"
test = false
bench = false

[profile.release]
lto = true
codegen-units = 1
# debug = true
debug = 0
opt-level = "z"
